Closed Bug 1043453 Opened 11 years ago Closed 11 years ago

OdinMonkey: fix bugs in interrupt handling

Categories

(Core :: JavaScript Engine: JIT, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla34

People

(Reporter: luke, Assigned: luke)

References

Details

Attachments

(1 file)

Attached patch fix-interruptSplinter Review
Bug 1027885 introduced two bugs: - AsmJSHandleExecutionInterrupt returns 'void' when it should return 'bool'. This bug doesn't manifest itself in practice since HandleExecutionInterrupt leaves the bool in the return register. - While patching the code in setProfilingEnabled, we need to guard against interrupt-caused mprotect'ing of the code
Attachment #8461637 - Flags: review?(dtc-moz)
Blocks: 1027885
No longer depends on: 1027885
Comment on attachment 8461637 [details] [diff] [review] fix-interrupt Review of attachment 8461637 [details] [diff] [review]: ----------------------------------------------------------------- Looks good.
Attachment #8461637 - Flags: review?(dtc-moz) → review+
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla34
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: