Bug 1043453 - OdinMonkey: fix bugs in interrupt handling (r=dougc)